# PoE2PriceTracker

./: .gitattributes  .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  NOTICE  README.md  THIRD-PARTY-NOTICES.md  TRADEMARK-NOTICE.md  pyproject.toml  requirements-release.txt  requirements.txt
docs/: ocr-ui-packaging-strategy.md  quark-update-channel.md
installer/: PoE2PriceTracker.iss
scripts/: build.ps1  make_channel_manifest.py  make_release.ps1  prepare_ocr_bundle.ps1  publish_qiniu.py  publish_release_channels.py  rebuild_currency_manifest_from_local_icons.py  run.ps1  sync_currency_icons.py  test.ps1  test_runner.ps1  verify_currency_icons.py
scripts/pyinstaller_hooks/: hook-cv2.py
server/: admin_clear_realtime.py  poe2-price-share.service.example  price_share_service.py
src/poe2_price_tracker/: __init__.py  __main__.py  app.py  bundled_assets.py  clipboard_parser.py  config.py  currencies.py  db.py  hotkeys.py  market_exchange.py  ocr.py  ocr_setup.py  parser.py  poe2db_sync.py  realtime_sync.py  screenshot.py  secure_config.py  structure.py  themes.py  updater.py
src/poe2_price_tracker/assets/icons/currency/: manifest.json
tests/: conftest.py  test_app_behaviors.py  test_bundled_assets.py  test_clipboard_parser.py  test_config.py  test_currency_conversion.py  test_market_exchange.py  test_ocr_provider.py  test_parser.py  test_poe2db_sync.py  test_realtime_sync.py  test_screenshot.py  test_structure.py  test_ui_smoke.py  test_updater.py
