[project]
name = "poe2-price-tracker"
version = "0.2.6"
description = "Local screenshot-first price tracker for Path of Exile 2."
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
poe2-price-tracker = "poe2_price_tracker.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
